# hand-of-hsaka

./: .gitignore  README.md  pyproject.toml
hand_of_hsaka/: fetch.py  ftx.py  stream.py  test.py  trade.py
tests/: test_hand_of_hsaka.py
